Added DB persistance

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 server.port=8081
 
 # Youtube API config
-youtube.search.api.key=AIzaSyDAcndvDzjLwR-Lr7PAIpZQyK5pm6obCHs
 youtube.search.api.url=https://www.googleapis.com
 youtube.search.api.endpoint=/youtube/v3/search
 youtube.search.api.frequencyMillis=1800000
@@ -9,9 +8,11 @@ youtube.search.api.pageSize=20
 youtube.search.api.searchQuery=football
 
 # DB config
-spring.datasource.url=jdbc:h2:mem:videosdb
+spring.datasource.url=jdbc:h2:file:./db/videosdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
